feat: html meta keyword, description 작성

--- a/templates/base.html
+++ b/templates/base.html
@@ -4,6 +4,10 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="keywords"
+              content="반려견 질환 예측, 강아지 건강 진단, AI 질병 분석, 동물병원 찾기, 반려동물 의료, 반려견 건강관리, 강아지 질병 정보, 펫케어, 반려견 커뮤니티, 강아지 사진 진단, 반려동물 병원 안내, 강아지 병원 추천, 반려견 질환 증상, 반려견 건강 앱">
+        <meta name="description"
+              content="Conveting 은 AI 모델을 통해 반려견의 안구 및 피부 질환을 예측하는 서비스입니다" />
         <link rel="stylesheet" href="{% static 'globals.css' %}">
         <link rel="stylesheet" href="{% static 'styleguide.css' %}">
         <link rel="stylesheet" href="{% static 'style.css' %}">
