--- a/templates/hospitals/nearest.html
+++ b/templates/hospitals/nearest.html
@@ -1,7 +1,9 @@
-<h2>내 주변 동물병원</h2>
-<ul id="hospitals-list">
-</ul>
-<script>
+{% extends "base.html" %}
+{% block content %}
+  <h2>내 주변 동물병원</h2>
+  <ul id="hospitals-list">
+  </ul>
+  <script>
 if (!navigator.geolocation) {
   alert("이 브라우저는 위치 정보를 지원하지 않습니다");
 } else {
@@ -28,4 +30,5 @@ if (!navigator.geolocation) {
     alert("위치 사용을 허용해야 주변 병원을 볼 수 있습니다");
   });
 }
-</script>
+  </script>
+{% endblock content %}
