feat: 네비게이션 로고에 메인페이지 링크 추가 및 메뉴 css 수정

--- a/templates/common/nav.html
+++ b/templates/common/nav.html
@@ -2,29 +2,33 @@
 <div class="header">
     <a href="{% url 'index' %}">
         <div class="logo">
-            <img class="group"
-                 src="{% static 'img/group.png' %}"
-                 width="auto"
-                 height="auto"
-                 alt="logo" />
+            <img class="group" src="{% static 'img/group.png' %}" />
             <div class="text-wrapper">Conveting</div>
         </div>
     </a>
     <div class="menu">
         <div class="div-wrapper">
+            <a href="{% url 'index' %}">
+                <div class="text-wrapper-2 {% if request.path == '/' %}active{% endif %}">Home</div>
+            </a>
+        </div>
+        <div class="div-wrapper">
             <a href="{% url 'prediction_create' %}">
-                <div class="text-wrapper-2">AI 질환 예측</div>
+                <div class="text-wrapper-2
+                            {% if '/prediction/' in request.path %}active{% endif %}">AI 질환 예측</div>
             </a>
         </div>
         <div class="div-wrapper">
             <a href="{% url 'post_list' %}">
-                <div class="text-wrapper-2">게시판</div>
+                <div class="text-wrapper-2
+                            {% if '/post/' in request.path %}active{% endif %}">게시판</div>
             </a>
         </div>
         {% if user.is_authenticated %}
             <div class="div-wrapper">
                 <a href="{% url 'mypage' %}">
-                    <div class="text-wrapper-2">마이페이지</div>
+                    <div class="text-wrapper-2
+                                {% if '/mypage/' in request.path %}active{% endif %}">마이페이지</div>
                 </a>
             </div>
             <div class="div-wrapper">
@@ -41,12 +45,14 @@
         {% else %}
             <div class="div-wrapper">
                 <a href="{% url 'login' %}">
-                    <div class="text-wrapper-2">로그인</div>
+                    <div class="text-wrapper-2
+                                {% if '/login/' in request.path %}active{% endif %}">로그인</div>
                 </a>
             </div>
             <div class="div-wrapper">
                 <a href="{% url 'account_signup' %}">
-                    <div class="text-wrapper-2">회원가입</div>
+                    <div class="text-wrapper-2
+                                {% if '/signup/' in request.path %}active{% endif %}">회원가입</div>
                 </a>
             </div>
         {% endif %}
