--- a/static/style.css
+++ b/static/style.css
@@ -83,10 +83,26 @@
     position: relative;
     width: fit-content;
     margin-top: -1px;
-    font-family: "Poppins-Medium", Helvetica;
-    font-weight: 500;
+    padding: 4px 10px;
+    font-family: "Poppins-SemiBold";
+    /* font-weight: 600; */
     color: var(--defaultblack);
     font-size: 20px;
     letter-spacing: 0;
     line-height: normal;
+}
+
+.header .div.active,
+.header .text-wrapper-2.active {
+    border-bottom-width: 2px;
+    border-bottom-style: solid;
+    border-color: var(--orange-500);
+    display: inline-flex;
+    /* align-items: center;
+    justify-content: center;
+    gap: 10px;
+    padding: 4px 10px;
+    position: relative;
+    flex: 0 0 auto; */
+    color: var(--orange-500);
 }
